--- a/urzadzenia-peryferyjne/lab6/spr/lab6.tex
+++ b/urzadzenia-peryferyjne/lab6/spr/lab6.tex
@@ -56,7 +56,7 @@ Poza samym zeskanowaniem obrazu, udało nam sie również zmeiniać podstawowe p
 \subsection{Rozdzielczość}
 \paragraph{}
 DPI (dots per inch) - liczba plamek przypadająca na cal, używane jako miara rozdzielczości drukarek, ploterów, skanerów itp. 
-
+TODO
 \subsection{Kontrast}
 \paragraph{} % (fold)
 \label{par:}
