--- a/urzadzenia-peryferyjne/lab6/spr/lab6.tex
+++ b/urzadzenia-peryferyjne/lab6/spr/lab6.tex
@@ -130,6 +130,6 @@ Przykładowe okno programu :
 % paragraph  (end)
 
 \section{Wnioski}
-Napisanie programu do obsługi skanera płaskiego z wykorzystaniem biblioteki WIA nie jest zadaniem trudnym. Ustawiając odpowiednie parametry skanowania (kontrast, jasność, dpi) jesteśmy wstanie otrzymać praktycznie dowolne obrazy, których jakość ograniczają możliwości urządzenia.
+Napisanie programu do obsługi skanera płaskiego z wykorzystaniem biblioteki WIA nie jest zadaniem trudnym. Ustawiając odpowiednie parametry skanowania (kontrast, jasność, dpi) jesteśmy wstanie otrzymać praktycznie dowolne obrazy, których jakość ograniczają tylko możliwości urządzenia.
 \paragraph{}
 \end{document}
